--- a/05-Mongoose/server/package.json
+++ b/05-Mongoose/server/package.json
@@ -1,14 +1,15 @@
 {
   "dependencies": {
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "mongoose": "^8.18.2",
-     "type": "module" 
+    "nodemon": "^3.1.10"
   },
   "name": "server",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "app.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
